# rk2

./: CMakeLists.txt  OAIPrk.cpp  RK.cpp  Zadanie1.sql  main.cpp  дз2инфа2вар
